[project]
name = "WeClone-audio"
version = "0.1.0"
description = ""
authors = [
    {name = "xming521"}
]
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = []

[project.optional-dependencies]
xcodec = ["xcodec2==0.1.3"]
wx = ["pywxdump"]

[dependency-groups]
xcodec = ["xcodec2==0.1.3"]
wx = ["pywxdump"]

[tool.uv]
conflicts = [
    [
      { group = "xcodec" },
      { group = "wx" },
    ],
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
